# circuitpython_scripts

./: README.rst  pyproject.toml  requirements-test.txt
circuitpython_scripts/: connection_helper.py  socket_logger.py
